--- a/package.json
+++ b/package.json
@@ -15,14 +15,20 @@
     "migrate:prod": "ts-node --project tsconfig.node.json ./scripts/migrate_prod.ts"
   },
   "dependencies": {
+    "@emotion/cache": "latest",
+    "@emotion/react": "latest",
+    "@emotion/server": "latest",
+    "@emotion/styled": "latest",
+    "@microlink/vanilla": "^5.5.5",
+    "@mui/material": "^5.0.0",
     "@types/react": "^16.9.56",
     "firebase": "^8.0.2",
     "firebase-admin": "^9.4.0",
-    "next": "10",
+    "next": "^11.1.2",
     "nookies": "^2.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "sass": "^1.39.2",
     "typescript": "^4.0.5"
-  },
-  "devDependencies": {}
+  }
 }
