--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "sass": "^1.39.2",
+    "swr": "^1.1.2",
     "typescript": "^4.0.5"
   }
 }
