--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^17.0.1",
     "sass": "^1.39.2",
     "swr": "^1.1.2",
-    "typescript": "^4.0.5"
+    "ts-node": "^10.4.0",
+    "typescript": "^4.3.2"
   }
 }
