--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sass": "^1.39.2",
     "swr": "^1.1.2",
     "ts-node": "^10.4.0",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "yup": "^0.32.11"
   }
 }
