--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "@emotion/react": "latest",
     "@emotion/server": "latest",
     "@emotion/styled": "latest",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@microlink/vanilla": "^5.5.5",
+    "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.0.0",
     "@types/react": "^16.9.56",
     "axios": "^0.23.0",
