--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "export NODE_OPTIONS=--openssl-legacy-provider && next dev",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider && next build",
     "export": "next export",
-    "start": "next start",
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider && next start",
     "codegen:dev": "nodemon -e ts --ignore generated -x ts-node --project tsconfig.node.json ./scripts/codegen_dev.ts",
     "codegen:staging": "ts-node --project tsconfig.node.json ./scripts/codegen_staging.ts",
     "codegen:prod": "ts-node --project tsconfig.node.json ./scripts/codegen_prod.ts",
@@ -23,11 +23,14 @@
     "@mui/material": "^5.0.0",
     "@types/react": "^16.9.56",
     "axios": "^0.23.0",
+    "cookie": "^0.5.0",
     "firebase": "^8.0.2",
     "firebase-admin": "^9.4.0",
     "next": "^11.1.2",
+    "nodemailer": "^6.7.3",
     "nookies": "^2.5.0",
     "react": "^17.0.1",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.1",
     "sass": "^1.39.2",
     "swr": "^1.1.2",
