--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@emotion/server": "latest",
     "@emotion/styled": "latest",
     "@microlink/vanilla": "^5.5.5",
-    "@mui/material": "^5.0.0",
-    "@types/react": "^16.9.56",
+    "@mui/material": "^5.2.8",
+    "@mui/system": "^5.2.8",
+    "@mui/x-data-grid": "^5.10.0",
+    "@types/react": "^17.0.0",
     "axios": "^0.23.0",
     "cookie": "^0.5.0",
     "firebase": "^8.0.2",
@@ -29,9 +31,9 @@
     "next": "^11.1.2",
     "nodemailer": "^6.7.3",
     "nookies": "^2.5.0",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-cookie": "^4.1.1",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "sass": "^1.39.2",
     "swr": "^1.1.2",
     "ts-node": "^10.4.0",
