Subscription and cashfree

--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "firebase": "^8.0.2",
     "firebase-admin": "^9.4.0",
     "next": "^11.1.2",
+    "next-seo": "^5.4.0",
     "nodemailer": "^6.7.3",
     "nookies": "^2.5.0",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-material-ui-carousel": "^3.3.3",
     "sass": "^1.39.2",
     "swr": "^1.1.2",
     "ts-node": "^10.4.0",
