--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-material-ui-carousel": "^3.3.3",
+    "@mui/icons-material": "^5.6.2",
+    "sharp": "^0.30.4",
     "sass": "^1.39.2",
     "swr": "^1.1.2",
     "ts-node": "^10.4.0",
