fixing UI changes

--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@emotion/server": "latest",
     "@emotion/styled": "latest",
     "@microlink/vanilla": "^5.5.5",
+    "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.2.8",
     "@mui/system": "^5.2.8",
     "@mui/x-data-grid": "^5.10.0",
+    "@svgr/webpack": "^6.2.1",
     "@types/react": "^17.0.0",
     "axios": "^0.23.0",
     "cookie": "^0.5.0",
@@ -36,9 +38,8 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-material-ui-carousel": "^3.3.3",
-    "@mui/icons-material": "^5.6.2",
-    "sharp": "^0.30.4",
     "sass": "^1.39.2",
+    "sharp": "^0.30.4",
     "swr": "^1.1.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.3.2",
