--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@svgr/webpack": "^6.2.1",
     "@types/react": "^17.0.0",
     "axios": "^0.23.0",
+    "chart.js": "^3.8.0",
     "cookie": "^0.5.0",
     "firebase": "^8.0.2",
     "firebase-admin": "^9.4.0",
@@ -35,6 +36,7 @@
     "nodemailer": "^6.7.3",
     "nookies": "^2.5.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.1.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-material-ui-carousel": "^3.3.3",
